[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Player_01.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Imgs/player-jump-2.png" type="Texture" id=2]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Imgs/player-jump-1.png" type="Texture" id=3]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Imgs/player-walk-1.png" type="Texture" id=4]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Imgs/player-walk-2.png" type="Texture" id=5]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Imgs/player-walk-3.png" type="Texture" id=6]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Imgs/player-walk-4.png" type="Texture" id=7]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Sonidos/paso.wav" type="AudioStream" id=8]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles2D/Player_01/Sonidos/salto.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "caer",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.8566

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8.51159 )
frames = SubResource( 1 )
animation = "saltar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.104858, -0.891731 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -552.0
margin_top = -320.0
margin_right = 558.0
margin_bottom = 324.0

[node name="AudioPasos" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
pitch_scale = 0.5

[node name="AudioSalto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="finished" from="AudioPasos" to="." method="_on_AudioPasos_finished"]
